2008-09-02  Akira TAGOH  <tagoh@redhat.com>

	* applet/Makefile.am (INCLUDES): Fix a build stop due to the lack of
	the proper options.

2008-09-01  Akira TAGOH  <tagoh@redhat.com>

	* applet/imsettings-applet.desktop.in.in (Icon): Get rid of
	the extension. (rhbz#460695)

2008-08-29  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c (_activate): Fix a typo.

	* applet/main.c (_setup_acceleration_key): new.
	(_get_acceleration_key): new.
	(_preference_update_entry): new.
	(_preference_grabbed): new.
	(_preference_grabkey): new.
	(_preference_closed): new.
	(_preference_activated): new.
	(_create_applet): disable the acceleration key feature temporarily.
	this isn't well tested.

2008-08-28  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_destroy_ic): 
	send XIM_DESTROY_IC instead of relying on the default behavior when
	unable to get imid.

	* src/factory.c (imsettings_manager_real_start_im): send "Changed"
	signal.
	(imsettings_manager_real_stop_im): likewise.

	* imsettings/imsettings-request.c (imsettings_request_send_signal_changed):
	new.

	* applet/main.c (_activate): show a notice if no default IM is setup.
	(imsettings_xim_message_filter): Update the icon when any changes made
	externally.

	* applet/radiomenuitem.c: the code cleanup.

2008-08-27  Akira TAGOH  <tagoh@redhat.com>

	* applet/imsettings-applet.desktop.in.in: new.

	* applet/main.c: XIM support.

2008-08-26  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-info.c (main): make default to see the info for IM
	currently running. (Issue#14)

	* data/xinput.sh.in.in: provide the old way to bring up IM and do that
	when dbus session isn't running.

	* data/xinput.sh.in.in: Remove the unnecessary invocation of gconftool.

	* backends/xim/proxy.c (_create_client): fallback to the default IM
	if failed.
	(xim_proxy_client_protocol_real_xim_auth_ng): new.
	(xim_proxy_client_protocol_real_xim_trigger_notify_reply):
	fix a deadlock on finalize.